syntax = "proto3";

package spinnaker.keel.api;

option java_multiple_files = true;
option java_package = "com.netflix.spinnaker.keel.api";

import "google/protobuf/any.proto";

message Asset {
  AssetId id = 1;
  repeated AssetId dependsOn = 2;
  TypeMetadata typeMetadata = 3;
  google.protobuf.Any spec = 4;
}

message PartialAsset {
  AssetId id = 1;
  AssetId root = 2;
  TypeMetadata typeMetadata = 3;
  google.protobuf.Any spec = 4;
}

message AssetContainer {
  Asset asset = 1;
  repeated PartialAsset partialAsset = 2;
}

message AssetId {
  string value = 1;
}

message TypeMetadata {
  string apiVersion = 1;
  string kind = 2;
}
