syntax = "proto3";

package com.netflix.spinnaker.keel.aws;

option java_multiple_files = true;
option java_package = "com.netflix.spinnaker.keel.ec2";

message SecurityGroup {
  string application = 1;
  string name = 2;
  string accountName = 3;
  string region = 4;
  string vpcName = 5;
  repeated SecurityGroupRule inboundRule = 6;
  repeated SecurityGroupRule outboundRule = 7;
  string description = 8;
}

message SecurityGroupRules {
  repeated SecurityGroupRule inboundRule = 1;
  repeated SecurityGroupRule outboundRule = 2;
}

message SecurityGroupRule {
  oneof rule {
    ReferenceRule referenceRule = 1;
    CrossRegionReferenceRule crossRegionReferenceRule = 2;
    SelfReferencingRule selfReferencingRule = 3;
    CidrRule cidrRule = 5;
  }
}

message ReferenceRule {
  repeated PortRange portRange = 1;
  string protocol = 2;
  string name = 3;
}

message CrossRegionReferenceRule {
  repeated PortRange portRange = 1;
  string protocol = 2;
  string name = 3;
  string account = 4;
  string vpcName = 5;
}

message SelfReferencingRule {
  repeated PortRange portRange = 1;
  string protocol = 2;
}

message CidrRule {
  string protocol = 1;
  repeated PortRange portRange = 2;
  string blockRange = 3;
}

message PortRange {
  int32 startPort = 1;
  int32 endPort = 2;
}
